kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arca-webserver-ingress
  labels:
    app: arca-webserver
spec:
  rules:
  - host: local.arca.org
    http:
      paths:
      - pathType: Prefix
        path: "/tree"
        backend:
          service:
            name: arca-webserver-service
            port:
              number: 3000
